@@ -121,7 +121,11 @@ module Ronn
     # available. This is used as the manual page name when the
     # file contents do not include a name section.
     def path_name
-      @basename[/^[^.]+/] if @basename
+      return unless @basename
+      parts = @basename.split('.')
+      parts.pop if parts.last.downcase == 'ronn'
+      parts.pop if parts.last =~ /^\d+$/
+      parts.join(".")
     end
 
     # Returns the <section> part of the path, or nil when
